[project]
name = "lld-designs"
version = "0.1.0"
description = "helps to better design softwares"
authors = [
    {name = "Rahul_Mehta"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
